--- a/inventory_manager/src/styles/Timeline.css
+++ b/inventory_manager/src/styles/Timeline.css
@@ -16,4 +16,9 @@
     position: relative;
     overflow-x: hidden;
     width: 100%;
+    height: 200px;
+}
+
+.goalBlockOuterContainer {
+    position: absolute;
 }
